whitespace fixed

--- a/src/components/pages/Jumbotron.css
+++ b/src/components/pages/Jumbotron.css
@@ -1,8 +1,23 @@
 .Jumbotron {
     background-color: #F7F7F2 !important;
+   ;
 }
 
 .text {
     color: #121113;
     font-family: 'Nunito Sans', sans-serif;
+}
+
+.Container {
+    background-color: #F7F7F2 !important;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-left:  auto;
+    margin-right: auto;
+    display: block;
+    overflow: auto;
+    height: 100vh;
+    
+   
 }
